--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,6 +140,10 @@ body {
   -webkit-text-size-adjust: none;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 mark {
   background-color: transparent;
   color: inherit;
